--- a/renovate.json
+++ b/renovate.json
@@ -22,8 +22,7 @@
 		},
 		{
 			"matchPackageNames": [
-				"ioredis",
-				"redis",
+				"@upstash/redis",
 				"svelte-kit-sessions",
 				"@tsconfig/node18",
 				"@tsconfig/recommended",
